--- a/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/View/MainControl.xaml
+++ b/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/View/MainControl.xaml
@@ -1,11 +1,53 @@
-﻿<UserControl x:Class="O2Micro.BCLabManager.Shell.MainControl"
+﻿<UserControl x:Class="O2Micro.BCLabManager.Shell.View.MainControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="480" d:DesignWidth="640">
-    <Grid>
+    <UserControl.Resources>
+        <ResourceDictionary Source="MainWindowResources.xaml" />
+    </UserControl.Resources>
+    <TabControl>
+        <TabItem>
+    <DockPanel>
+
+        <Grid Margin="4">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="4" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Border 
+        Grid.Column="0" 
+        Style="{StaticResource MainBorderStyle}"
+        Width="170"
+        >
+                <HeaderedContentControl
+          Content="{Binding Path=Commands}"
+          ContentTemplate="{StaticResource CommandsTemplate}"
+          Header="Control Panel"
+          Style="{StaticResource MainHCCStyle}"
+          />
+            </Border>
+
+            <Border
+        Grid.Column="2" 
+        Style="{StaticResource MainBorderStyle}"
+        >
+                <HeaderedContentControl 
+          Content="{Binding Path=Workspaces}"
+          ContentTemplate="{StaticResource WorkspacesTemplate}"
+          Header="Workspaces"
+          Style="{StaticResource MainHCCStyle}"
+          />
+            </Border>
+        </Grid>
+            </DockPanel>
+        </TabItem>
+        <TabItem>
+        <Grid>
         <TabControl>
             <TabItem Header="Registration">
                 <TabControl>
@@ -563,5 +605,7 @@
                 </TabControl>
             </TabItem>
         </TabControl>
-    </Grid>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </UserControl>
