--- a/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/View/MainWindowResources.xaml
+++ b/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/View/MainWindowResources.xaml
@@ -47,6 +47,10 @@ This resource dictionary is used by the MainWindow.
         <vw:RequestView />
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type vm:AllExecutorsViewModel}">
+        <vw:AllExecutorsView />
+    </DataTemplate>
+
     <!-- 
   This style configures both of the main content areas in the main window.
   -->
