Implemented save as, but the mainWindowViewModel is everywhere!

--- a/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/View/AllBatteryTypesView.xaml
+++ b/O2Micro.BCLabManager.Shell/O2Micro.BCLabManager.Shell/View/AllBatteryTypesView.xaml
@@ -47,6 +47,15 @@
             Header="Material" 
             DisplayMemberBinding="{Binding Path=Material}" 
             />
+                <GridViewColumn 
+            Header="Operation" 
+            >
+                    <GridViewColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Save _As" Command="{Binding Path=SaveAsCommand}"></Button>
+                        </DataTemplate>
+                    </GridViewColumn.CellTemplate>
+                </GridViewColumn>
             </GridView>
         </ListView.View>
     </ListView>
